# oasim

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/oasim/: CMakeLists.txt  clrtrans_mod.f90  daysetrad_mod.f90  edeu_mod.f90  glight_mod.f90  lidata_mod.f90  lidatatm_mod.f90  oasim_constants_mod.f90  oasim_mod.f90  ocalbedo_mod.f90  radmod_mod.f90  rlwn_mod.f90  setlte_mod.f90  setsfclte_mod.f90  sfcirr_mod.f90  slingo_mod.f90
test/: CMakeLists.txt  test_oasim.f90
